--- a/index.html
+++ b/index.html
@@ -8,35 +8,35 @@
     <link rel="stylesheet" href="style.css">
     <style>
         body {
-            background-color: rgb (102, 91, 91);
+            background-color: rgb(102, 91, 91);
         }
 
         label {
-            color: rgb (172, 170, 168);
+            color: rgb(172, 170, 168);
             text-decoration: ;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         }
 
         input {
-            color: rgba (0, 0, 0, 0.603);
+            color: rgb(0, 0, 0, 0.603);
             border: none;
             outline: none;
-            background-color: rgb 102, 91, 91);
+            background-color: rgb(102, 91, 91);
         }
 
         input[type="submit"] {
-            background-color: rgb (50, 129, 219);
-            font-size: 20 px;
+            background-color: rgb(50, 129, 219);
+            font-size: 20px;
             text-align: center;
             color: whitesmoke;
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            padding: 5 px;
+            padding: 5px;
            
             
         }
 
         input[type="reset"] {
-            background-color: rgb (235, 236, 243);
+            background-color: rgb(235, 236, 243);
             font-size: 20px;
             text-align: center;
             color: #292525;
@@ -48,9 +48,9 @@
            background-color:  rgb (225, 240, 24);
         }
 button{
-    background-color:rgb (50, 129, 219);
-    font-size:20 px;
-    padding:5 px;
+    background-color:rgb(50, 129, 219);
+    font-size:20px;
+    padding:5px;
     text-decoration: none;
     color: white;
     border: none;
